--- a/Demo Project/package.json
+++ b/Demo Project/package.json
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.7",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/cli": "^13.1.2",
+    "@angular/compiler-cli": "^10.0.14",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
@@ -53,7 +53,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.9.5"
   },
   "engines": {
     "node": "12.18.2",
